--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tauri-apps/plugin-http": "^2.0.0",
     "blockly": "^11.0.1",
     "antd": "^5.16.0",
+    "@ant-design/charts": "^2.0.3",
     "axios": "^1.6.0",
     "styled-components": "^6.1.0",
     "react-router-dom": "^6.22.0",
