--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "tauri:dev": "tauri dev"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -19,7 +20,6 @@
     "@tauri-apps/plugin-http": "^2.0.0",
     "blockly": "^11.0.1",
     "antd": "^5.16.0",
-    "@ant-design/charts": "^2.0.3",
     "axios": "^1.6.0",
     "styled-components": "^6.1.0",
     "react-router-dom": "^6.22.0",
