--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,8 @@ anyhow = "1.0"
 thiserror = "1.0"
 log = "0.4"
 env_logger = "0.10"
-reqwest = { version = "0.12", features = ["json"] }
+reqwest = { version = "0.12", features = ["json", "stream"] }
+futures-util = "0.3"
 
 # 串口通信相关依赖
 serialport = "4.3"
