--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,25 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path mapping */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@utils/*": ["src/utils/*"],
+      "@types/*": ["src/types/*"]
+    },
+
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+
+    /* Additional type checking */
+    "noImplicitReturns": true
   },
-  "include": ["src"],
+  "include": ["src", "src/types/global.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 } 
