代码优化 但是没有颜色了

--- a/package.json
+++ b/package.json
@@ -31,13 +31,8 @@
     "@tauri-apps/plugin-http": "^2.0.0",
     "blockly": "^11.0.1",
     "antd": "^5.16.0",
-    "axios": "^1.6.0",
     "styled-components": "^6.1.0",
-    "react-router-dom": "^6.22.0",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.364.0",
-    "zustand": "^4.5.0",
-    "immer": "^10.0.0"
+    "lucide-react": "^0.364.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
