--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,11 +26,17 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
-    /* Additional type checking */
+    /* Type checking */
+    "noImplicitAny": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "alwaysStrict": true,
     "noImplicitReturns": true
   },
   "include": ["src", "src/types/global.d.ts"],
